<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background_color"
    tools:context=".activity_sign_in">

    <!-- Login progress -->
    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/green_form"
            android:padding="15dp">
                <AutoCompleteTextView
                    android:paddingTop="@dimen/text_padding_top_and_Bottom"
                    android:paddingBottom="@dimen/text_padding_top_and_Bottom"
                    android:textSize="@dimen/text_size_for_textboxes"
                    android:background="@drawable/text"
                    android:id="@+id/email"
                    android:paddingLeft="@dimen/text_padding_left"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint = "@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

                <EditText
                    android:layout_marginTop="@dimen/seperation"
                    android:paddingTop="@dimen/text_padding_top_and_Bottom"
                    android:paddingBottom="@dimen/text_padding_top_and_Bottom"
                    android:paddingLeft="@dimen/text_padding_left"
                    android:background="@drawable/text"
                    android:id="@+id/password"
                    android:textSize="@dimen/text_size_for_textboxes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />


            <Button
                android:id="@+id/btn_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:textSize="20dp"
                android:onClick="signInUser"
                android:background="@drawable/button"/>

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Register"
                android:textColor="#0000FF"
                android:textSize="20dp"
                android:onClick="updateActivityToSignUp"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>